@@ -18,7 +18,9 @@ package org.apache.tika.eval.util;
 
 import java.io.IOException;
 import java.nio.file.Path;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.regex.Pattern;
 
 import com.google.common.base.Optional;
 import com.optimaize.langdetect.DetectedLanguage;
@@ -28,7 +30,10 @@ import com.optimaize.langdetect.i18n.LdLocale;
 import com.optimaize.langdetect.ngram.NgramExtractors;
 import com.optimaize.langdetect.profiles.LanguageProfile;
 import com.optimaize.langdetect.profiles.LanguageProfileReader;
-import com.optimaize.langdetect.text.CommonTextObjectFactories;
+import com.optimaize.langdetect.text.MultiTextFilter;
+import com.optimaize.langdetect.text.RemoveMinorityScriptsTextFilter;
+import com.optimaize.langdetect.text.TextFilter;
+import com.optimaize.langdetect.text.TextObject;
 import com.optimaize.langdetect.text.TextObjectFactory;
 
 
@@ -37,13 +42,15 @@ public class LanguageIDWrapper {
     static LanguageDetector detector;
     static TextObjectFactory textObjectFactory;
 
+    static int MAX_TEXT_LENGTH = 50000;
+
     public static void loadBuiltInModels() throws IOException {
 
         languageProfiles = new LanguageProfileReader().readAllBuiltIn();
         detector = LanguageDetectorBuilder.create(NgramExtractors.standard())
                 .withProfiles(languageProfiles)
                 .build();
-        textObjectFactory = CommonTextObjectFactories.forDetectingOnLargeText();
+        textObjectFactory = buildTextObjectFactory();
     }
 
     public static void loadModels(Path path) throws IOException {
@@ -52,9 +59,15 @@ public class LanguageIDWrapper {
         detector = LanguageDetectorBuilder.create(NgramExtractors.standard())
                 .withProfiles(languageProfiles)
                 .build();
-        textObjectFactory = CommonTextObjectFactories.forDetectingOnLargeText();
+        textObjectFactory = buildTextObjectFactory();
     }
 
+    private static TextObjectFactory buildTextObjectFactory() {
+        List<TextFilter> textFilters = new ArrayList<>();
+        textFilters.add(TikasUrlTextFilter.getInstance());
+        textFilters.add(RemoveMinorityScriptsTextFilter.forThreshold(0.3));
+        return new TextObjectFactory(new MultiTextFilter(textFilters), MAX_TEXT_LENGTH);
+    }
 
 
     public static Optional<LdLocale> detect(String s) {
@@ -62,8 +75,31 @@ public class LanguageIDWrapper {
     }
 
     public static List<DetectedLanguage> getProbabilities(String s) {
-
-        return detector.getProbabilities(textObjectFactory.forText(s));
+        TextObject textObject = textObjectFactory.forText(s);
+        return detector.getProbabilities(textObject);
     }
 
+    public static void setMaxTextLength(int maxTextLength) {
+        MAX_TEXT_LENGTH = maxTextLength;
+    }
+
+    private static class TikasUrlTextFilter implements TextFilter {
+        //use this custom copy/paste of optimaize to avoid long, long hang with mail_regex
+        //TIKA-2777
+        private static final Pattern URL_REGEX = Pattern.compile("https?://[-_.?&~;+=/#0-9A-Za-z]{10,10000}");
+        private static final Pattern MAIL_REGEX = Pattern.compile("[-_.0-9A-Za-z]{1,100}@[-_0-9A-Za-z]{1,100}[-_.0-9A-Za-z]{1,100}");
+        private static final TikasUrlTextFilter INSTANCE = new TikasUrlTextFilter();
+
+        public static TikasUrlTextFilter getInstance() {
+            return INSTANCE;
+        }
+
+        private TikasUrlTextFilter() {
+        }
+
+        public String filter(CharSequence text) {
+            String modified = URL_REGEX.matcher(text).replaceAll(" ");
+            return MAIL_REGEX.matcher(modified).replaceAll(" ");
+        }
+    }
 }
