@@ -7,6 +7,7 @@ Release 2.0.0 - ???
 
 Release 1.20 - ???
 
+   * Improve language id efficiency in tika-eval (TIKA-2777).
 
    * Upgrade sqlite "provided" dependency to 3.25.2 (TIKA-2773).
 
